# LedgerMind

./: .env.example  .gitignore  README.md  dc.sh  pyproject.toml  pytest.ini  topic.md
.github/workflows/: cd.yml  ci.yml
adr/: 001-tenancy-model.md  002-auth-strategy.md  003-llm-local-only.md  004-data-encryption.md  005-log-policy.md  006-document-ingestion-pipeline.md  007-agent-architecture.md  008-plan-comptable.md  009-validation-workflow.md  010-fec-export.md
backend/: Dockerfile
backend/apps/agents/: apps.py  graph.py  nodes.py  state.py  tasks.py  tools.py
backend/apps/api/: apps.py  gdpr.py  notifications.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/documents/: apps.py  models.py
backend/apps/ledger/: apps.py  models.py
backend/apps/tenants/: apps.py  models.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/core/: managers.py  middleware.py
backend/fernet_fields/: __init__.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/sql/: init.sql
backend/templates/admin/: base_site.html  login.html
docker/: docker-compose.dev.yml  docker-compose.prod.yml
docker/pgadmin/: servers.json
docker/traefik/: traefik.dev.yml  traefik.prod.yml
docs/: MEMO_ORG_REQUESTS.md
docs/design/: ledgermind-template.html
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  invoices.spec.ts  ledger.spec.ts  org-selector.spec.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: AppSidebar.tsx  TopBar.tsx
frontend/src/lib/: proxy.ts
lab/graph/: __init__.py  graph.py
lab/graph/domain/: __init__.py  state.py
lab/graph/nodes/: accountant.py  extractor.py  rejector.py  validator.py
lab/graph/tests/: __init__.py  test_graph.py
lab/intake/: __init__.py  pipeline.py
lab/intake/extractors/: __init__.py  regex_extractor.py  schema.py
lab/intake/parsers/: __init__.py  ocr_parser.py  pdf_parser.py
lab/intake/tests/: __init__.py  test_intake.py
lab/ledger/: __init__.py
lab/ledger/domain/: account.py  entry.py  exceptions.py  ledger.py  money.py
lab/ledger/fec/: exporter.py
lab/ledger/pcg/: chart.py
lab/mcp/: __init__.py  schemas.py  server.py  tools.py
lab/mcp/tests/: test_mcp.py
lab/rag/: __init__.py  pipeline.py
lab/workflow/: __init__.py  pipeline.py  state.py
mcp_servers/: Cargo.toml
mcp_servers/common/: Cargo.toml
mcp_servers/common/src/: error.rs  jsonrpc.rs  lib.rs
mcp_servers/compliance/: Cargo.toml
mcp_servers/compliance/src/: handlers.rs  main.rs
mcp_servers/documents/: Cargo.toml
mcp_servers/documents/src/: handlers.rs  main.rs  storage.rs
mcp_servers/ledger/: Cargo.toml  Dockerfile
mcp_servers/ledger/src/: db.rs  handlers.rs  main.rs
mcp_servers/pdf/: Cargo.toml
mcp_servers/pdf/src/: handlers.rs  main.rs
requirements/: lab.txt
(+71 files in other folders)
