[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ledgermind-lab"
version = "0.1.0"
description = "LedgerMind — invariant lab (pure Python, no Django dependency)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["lab*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["lab"]
addopts = "-v --tb=short"
