[workspace]
members = [
    "common",
    "ledger",
    "documents",
    "pdf",
    "compliance",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LedgerMind Team"]
license = "UNLICENSED"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json", "tower-log"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# PostgreSQL (ledger crate)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }

# S3 / MinIO (documents crate)
aws-sdk-s3 = "1"
aws-config = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
