[package]
name = "mcp-documents"
version.workspace = true
edition.workspace = true

[dependencies]
ledgermind-common = { path = "../common" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
