[package]
name = "mcp-pdf"
version.workspace = true
edition.workspace = true

[dependencies]
ledgermind-common = { path = "../common" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
